# ipcmsgque

./: CMakeLists.txt  README.md
src/: App.cpp  Client.cpp  Client.h  ClientApp.h  ClientSocket.h  File.cpp  File.h  Server.h  ServerApp.cpp  ServerApp.h  ServerSocket.cpp  ServerSocket.h  SockReq.cpp  SockReq.h  SockResp.cpp  SockResp.h
